--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ai": "^4.3.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "meshline": "^3.3.1",
     "next": "15.4.2",
